Bug 1915328 - Update mallocedBufferBytes for string buffers used by nursery strings. r=jonco

This lets us trigger a minor GC if we're allocating many long strings. This avoids
a memory spike on the test case reported in the bug.

Differential Revision: https://phabricator.services.mozilla.com/D220388