mfbt/StringBuffer.h
@@ -211,6 +211,14 @@ class StringBuffer {
   uint32_t StorageSize() const { return mStorageSize; }
 
   /**
+   * This function returns the allocation size of a string buffer in bytes.
+   * This includes the size of the StringBuffer header.
+   */
+  uint32_t AllocationSize() const {
+    return sizeof(StringBuffer) + StorageSize();
+  }
+
+  /**
    * If this method returns false, then the caller can be sure that their
    * reference to the string buffer is the only reference to the string
    * buffer, and therefore it has exclusive access to the string buffer and
@@ -249,6 +257,11 @@ class StringBuffer {
     return mRefCount.load(std::memory_order_relaxed) > 1;
 #endif
   }
+
+  /**
+   * Alias for IsReadOnly.
+   */
+  bool HasMultipleReferences() const { return IsReadonly(); }
 
 #ifdef DEBUG
   /**
